--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "bhavikpatel",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.18.2",
     "express": "^4.15.5",
     "highcharts": "^5.0.14",
     "pryjs": "^1.0.3",
